# goat

./: .gitignore  Makefile  Makefile.am  README.md  configure.ac
cmocka/: gen-test-db.pl  main.c  main.h  run.c  run.h  wrap-test.pl
cmocka/message/: accessor.c  constructor.c  stringify.c  tags.c
cmocka/tresolver/: general.c
cunit/: Makefile  basic.c  cunit.c  cunit.pl  gen-suite-info.pl
cunit/message/: accessor.c  constructor.c  stringify.c  suite.c  tags.c
include/: goat.h
m4/: .gitignore
src/: Makefile.am  commands.c  commands.h  connection.c  connection.h  connsm.c  connsm.h  context.c  context.h  core.c  core.h  error.c  error.h  event.c  event.h  goat.c  goat.h  irc.c  irc.h  message.c  message.h  public.c  sm.h  tags.c  tags.h  tresolver.c  tresolver.h  util.c  util.h
tests/: msg-accessor.cmocka  msg-constructor.cmocka  msg-stringify.cmocka  msg-tags.cmocka  tresolver.cmocka
